fixed spacing2

--- a/src/App.css
+++ b/src/App.css
@@ -235,7 +235,7 @@
     margin: -3% 10% 0 8%;
   }
   .mainH1 {
-    font-size: 4.5em;
+    font-size: 3em;
   }
   .projectsImg, .projectsImg2 {
     width: 27%;
@@ -253,8 +253,11 @@
   .projectsImgPOne, .projectsImgPTwo {
     margin: 0% 5% 0 50%;
   }
-  .projectsImgPTwo {
+  .projectsImgPTwo{
     margin-top: 6%;
+  }
+  .projectsImgH3Two{
+    margin-top: 9%
   }
   .left {
     left: -7%;
