--- a/src/aboutMe/AboutMeCss.css
+++ b/src/aboutMe/AboutMeCss.css
@@ -6,7 +6,7 @@
 
 .aboutMeH1 {
   color: black;
-  font-size: 2em;
+  font-size: 1.5em;
   font-family: 'Merriweather', serif;
   text-transform: uppercase;
   text-align: center;
