--- a/src/experience/ExperienceCss.css
+++ b/src/experience/ExperienceCss.css
@@ -102,7 +102,7 @@
 }
 
 .content ul {
-  font-size: 1.3em;
+  font-size: 1em;
 }
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
