--- a/src/navbar/navbarCss.css
+++ b/src/navbar/navbarCss.css
@@ -19,7 +19,7 @@
 }
 
 .nav-item a {
-  font-size: 1.3em;
+  font-size: 0.9em;
   color: #fff;
   text-decoration: none;
   padding: 5px;
